--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,7 +81,7 @@
     /* max-width: 90vw;  */
     height: 95vh; 
     
-    background-image: url("../../docs/assets/images/rain.gif"); 
+    background-image: url("/assets/images/rain.gif"); 
     background-size: cover; 
     background-blend-mode:color-burn
   }
@@ -332,14 +332,14 @@
     <img
       width="50"
       alt="Logo"
-      src="../../docs/assets/images/logo2.svg"
+      src="/assets/images/logo2.svg"
     />
     <span margin-left="30px">Thane Sunter </span>
 
     <div class="spacer"></div>
     <a aria-label="cat" target="_blank" rel="noopener" title="cat" >
       <img 
-      src="../../docs/assets/images/cat.svg"
+      src="/assets/images/cat.svg"
       width="50"
       alt="cat"
       (click)="togglePeepee()"
@@ -347,7 +347,7 @@
     </a>
     <a aria-label="dog" target="_blank" rel="noopener" title="dog">
       <img 
-      src="../../docs/assets/images/dog.svg"
+      src="/assets/images/dog.svg"
       width="50"
       alt="dog"
       (click)="toggleJesse()"
@@ -355,7 +355,7 @@
     </a>
     <a aria-label="poo" target="_blank" rel="noopener" title="poo">
       <img 
-      src="../../docs/assets/images/poo.svg"
+      src="/assets/images/poo.svg"
       width="50"
       alt="poo"
       (click)="togglePoop()"
@@ -366,38 +366,38 @@
   <div class="content" role="love">
       <img 
       class="gar-left"
-      src=".../../docs/assets/images/gargoyleleft.png" 
+      src="/assets/images/gargoyleleft.png" 
       alt="LeftGarg"
       >
       <img 
       class="gar-right"
-      src="../../docs/assets/images/gargoyleright.png" 
+      src="/assets/images/gargoyleright.png" 
       alt="RightGarg"
       >
       <img 
       class="thane-bust"
-      src="../../docs/assets/images/thanebust.png" 
+      src="/assets/images/thanebust.png" 
       alt="thanebust"
       >
       <div class="grass"></div>
       <div class="jesse" *ngIf="toDisplayje">
         <img 
           class="jesse"
-          src="../../docs/assets/images/jesse.png" 
+          src="/assets/images/jesse.png" 
           alt="jesse"
       >
       </div>
       <div class="peepee" *ngIf="toDisplaypp">
         <img 
           class="peepee"
-          src="../../docs/assets/images/peepee.png" 
+          src="/assets/images/peepee.png" 
           alt="peepee"
       >
       </div>
       <div class="poo" *ngIf="toDisplaypo">
         <img 
           class="poo"
-          src="../../docs/assets/images/poop.png" 
+          src="/assets/images/poop.png" 
           alt="poo"
       >
       </div>
