--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -334,7 +334,7 @@
       alt="Logo"
       src="assets/images/logo2.svg"
     />
-    <span margin-left="30px">Thane Sunter </span>
+    <span margin-left="30px">Thane World </span>
 
     <div class="spacer"></div>
     <a aria-label="cat" target="_blank" rel="noopener" title="cat" >
