update audio files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -191,21 +191,6 @@
     color: #125699;
   }
 
-  .circle-link {
-    height: 40px;
-    width: 40px;
-    border-radius: 40px;
-    margin: 8px;
-    /* background-color: white; */
-    border: 1px solid #eeeeee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: 1s ease-out;
-  }
-
   .circle-link:hover {
     transform: translateY(-0.25rem);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
@@ -223,19 +208,6 @@
     align-items: center;
   }
 
-  .github-star-badge {
-    color: #24292e;
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    padding: 3px 10px;
-    border: 1px solid rgba(27,31,35,.2);
-    border-radius: 3px;
-    background-image: linear-gradient(-180deg,#fafbfc,#eff3f6 90%);
-    margin-left: 4px;
-    font-weight: 600;
-  }
-
   .home {
     width: 100%;
     height: 100%; 
@@ -244,24 +216,24 @@
   }
   .gar-left {
     position: fixed; 
-    top: 410px; 
+    top: 52vh; 
     right: calc(100vw - 35vw); 
   }
 
   .gar-right {
     position: fixed; 
-    top: 410px; 
+    top: 52vh;  
     left: calc(100vw - 35vw); 
   }
   .peepee {
     position: fixed; 
-    top: 520px; 
+    top: 65vh; 
     left: calc(100vw - 20vw); 
     width: 300px; 
   }
   .jesse {
     position: fixed; 
-    top: 550px; 
+    top: 68vh; 
     right: calc(100vw - 20vw); 
     width: 260px; 
   }
@@ -270,7 +242,7 @@
     left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); 
-  top: 113px; 
+  top: 15vh; 
   width: 50px; 
   }
   .thane-bust {
@@ -278,7 +250,7 @@
     left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); 
-  top: 507px; 
+  top: 65vh; 
   width: 350px; 
   }
   .grass {
