--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -216,33 +216,34 @@
   }
   .gar-left {
     position: fixed; 
-    top: 52vh; 
+    bottom: 0; 
     right: calc(100vw - 35vw); 
   }
 
   .gar-right {
     position: fixed; 
-    top: 52vh;  
+    bottom: 0;   
     left: calc(100vw - 35vw); 
   }
   .peepee {
     position: fixed; 
-    top: 65vh; 
+    bottom: 0;  
     left: calc(100vw - 20vw); 
     width: 300px; 
   }
   .jesse {
     position: fixed; 
-    top: 68vh; 
+    bottom: 0; 
     right: calc(100vw - 20vw); 
     width: 260px; 
   }
   .poo {
     position: fixed;
-    left: 50%;
+    left: 49%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); 
-  top: 15vh; 
+  top: 300px; 
+  bottom: 20px; 
   width: 50px; 
   }
   .thane-bust {
@@ -250,8 +251,9 @@
     left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); 
-  top: 65vh; 
+  bottom: 20px;  
   width: 350px; 
+  top: calc(100vh - 300px); 
   }
   .grass {
     background: rgba(33, 58, 20); 
