--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -261,7 +261,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 20px;
+    height: 5vh;
     width: 100%; 
     display: flex;
     align-items: center;
